# solana-tools-lite

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: create-sign-verify-v0.yml  create-sign-verify.yml  e2e-devnet-v0.yml  e2e-devnet.yml
extensions/: Cargo.toml  README.md
extensions/src/: lib.rs
extensions/src/analysis/: mod.rs  types.rs
extensions/src/analysis/light_protocol/: constants.rs  decoder.rs  errors.rs  mod.rs  models.rs  parsing.rs
extensions/src/analysis/light_protocol/tests/: constants_tests.rs  dispatch_tests.rs  edge_cases_tests.rs  mod.rs  parsing_tests.rs  transfer2_tests.rs
extensions/src/analysis/mock_protocol/: constants.rs  mod.rs  models.rs
solana-tools-lite/: Cargo.toml  pk  signed.json  test.pk  test.sig  test_base.txt  wallet.json
solana-tools-lite-cli/: Cargo.toml
solana-tools-lite-cli/src/: constants.rs  lib.rs  main.rs
solana-tools-lite-cli/src/flows/: analyze.rs  base58.rs  generation.rs  mod.rs  sign.rs  sign_tx.rs  verify.rs
solana-tools-lite-cli/src/flows/presenter/: analysis_presenter.rs  base58_presenter.rs  gen_presenter.rs  mod.rs  presenter_trait.rs  sign_presenter.rs  sign_tx_presenter.rs  utils.rs  verify_presenter.rs
solana-tools-lite-cli/src/models/: cmds.rs
solana-tools-lite-cli/src/shell/: cli.rs  config.rs  error.rs
solana-tools-lite-cli/tests/: analyze_flow_tests.rs  cmds_tests.rs  flow_tests.rs  presenter_output_tests.rs  sign_tx_flow_tests.rs
solana-tools-lite/123/: keys.json
solana-tools-lite/benches/: bench_signing.rs
solana-tools-lite/src/: constants.rs  deserializator.rs  deserializer.rs  errors.rs  lib.rs  main.rs  utils.rs
solana-tools-lite/src/adapters/: io_adapter.rs  mod.rs  transaction_adapter.rs
solana-tools-lite/src/codec/: decoder.rs  encoder.rs  instruction_decoder.rs  mod.rs  short_vec.rs
solana-tools-lite/src/crypto/: base58.rs  bip39.rs  derivation.rs  ed25519.rs  helpers.rs  mod.rs
solana-tools-lite/src/extensions/: mod.rs  registry.rs  traits.rs
solana-tools-lite/src/extensions/analysis/: actions.rs  mod.rs
solana-tools-lite/src/extensions/light_protocol/: constants.rs  mod.rs  parsing.rs
solana-tools-lite/src/extensions/light_protocol/tests/: constants_tests.rs  edge_cases_tests.rs  mod.rs  parsing_tests.rs
solana-tools-lite/src/flows/: generation.rs  mod.rs  presenter.rs  sign.rs  sign_tx.rs  verify.rs
solana-tools-lite/src/flows/presenter/: gen_presenter.rs  mod.rs  presenter_trait.rs  sign_presenter.rs  verify_presenter.rs
solana-tools-lite/src/handlers/: analysis.rs  base58.rs  gen.rs  generate.rs  mod.rs  sign.rs  sign_message.rs  sign_tx.rs  verify.rs
solana-tools-lite/src/layers/: cli.rs  io.rs
solana-tools-lite/src/models/: analysis.rs  cmds.rs  extensions.rs  hash_base58.rs  input_transaction.rs  instruction.rs  keypair_json.rs  message.rs  mod.rs  pubkey_base58.rs  results.rs  transaction.rs
solana-tools-lite/src/models/extensions/: light_protocol.rs
solana-tools-lite/src/serde/: fmt.rs  input_tx.rs  lookup_tables.rs  mod.rs  signature.rs
solana-tools-lite/tests/: analysis_tests.rs  base58_handler_tests.rs  base58_tests.rs  bench_signing.rs  bip39_tests.rs  bs58_integration.rs  cmds_test.rs  cmds_tests.rs  dalek_tests_integration.rs  derivation_tests.rs  deserializator_tests.rs  deserializer_tests.rs  ed25519_tests.rs  errors_tests.rs  generate_handler_tests.rs  hz_tests.rs  io_adapter_tests.rs  io_tests.rs  light_protocol_tests.rs  lookup_tables_tests.rs  privacy_hierarchy_tests.rs  serde_fmt_tests.rs  serde_input_tx_tests.rs  serde_signature_tests.rs  short_vec_tests.rs  sign_handler_tests.rs  sign_tx_handler_tests.rs  sign_tx_tests.rs  stress-test.rs  test_real_tx_sign.rs  transaction_adapter_tests.rs  ui_transaction_tests.rs  utils.rs  v0_input_json_tests.rs  v0_roundtrip_tests.rs  v0_sign_tests.rs  verify_handler_tests.rs
solana-tools-lite/tests/common/: mod.rs
solana-tools-lite/tests/data/: tx_template.json
