[package]
name = "extensions"
version = "0.1.1"
edition = "2024"
description = "Extensions for solana-tools-lite (not published separately)"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
bs58 = { workspace = true }
thiserror = { workspace = true }
solana-tools-lite = { path = "../solana-tools-lite" }
