[package]
name = "solana-tools-lite-cli"
version = "0.1.1"
edition = "2024"
description = "CLI for solana-tools-lite: offline-first Solana signer toolkit."
repository = "https://github.com/arhangelskij/solana-tools-lite"
license = "MIT"
readme = "../README.md"
keywords = ["solana", "cli", "signer", "offline", "ed25519"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
exclude = [
    ".github/*",
    "scripts/*",
    "assets/*",
    "tests/*",
]

[dependencies]
clap = { version = "4.5.44", default-features = false, features = ["std", "derive", "help", "usage"] }
solana-tools-lite = { version = "0.1.1", path = "../solana-tools-lite" }

# Dependencies needed by handlers and adapters
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"

[dev-dependencies]
anyhow = "1.0.99"
tempfile = "3.10.1"

[[bin]]
name = "solana-tools-lite"
path = "src/main.rs"

[[bin]]
name = "stl"
path = "src/main.rs"
