[package]
name = "solana-tools-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5.1"
thiserror = "2.0.12"
anyhow = "1.0.98"
log = "0.4.27"

# manual cryptography
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hex = "0.4.3" 

bip39 = { version = "2.2.0", features = ["rand"]}

ed25519-dalek = { version = "2.1.1", features = ["std"] }
rand = "0.9.1"
bincode = { version = "2.0.1", features = ["serde"] }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"