[package]
name = "solana-tools-lite"
version = "0.1.1"
edition = "2024"
description = "A lightweight, SDK-free, offline-first signing toolkit for Solana keys, messages, and transactions."
repository = "https://github.com/arhangelskij/solana-tools-lite"
license = "MIT"
readme = "../README.md"
keywords = ["solana", "signer", "offline", "ed25519", "crypto"]
categories = ["cryptography::cryptocurrencies", "encoding", "cryptography"]
exclude = [
    ".github/*",
    "scripts/*",
    "assets/*",
    "tests/*",
    "benches/*",
]

[dependencies]
serde = { workspace = true }
serde_json = "1.0.145"
bs58 = { workspace = true }
data-encoding = "2.9.0"
thiserror = { workspace = true }

# manual cryptography
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hex = "0.4.3" 

tiny-bip39 = "2.0.0"

ed25519-dalek = { version = "2.2.0", features = ["std"] }
rand = "0.8.5"
solana-short-vec = "3.1.0"
zeroize = { version = "1.8.1", features = ["derive"], optional = true }

[features]
default = []

[dev-dependencies]
rayon = "1.11.0"
criterion = "0.8.1"
anyhow = "1.0.100"
extensions = { path = "../extensions" }

[[bench]]
name = "bench_signing"
harness = false
